1. z-index correction.

--- a/classic/src/css/main.css
+++ b/classic/src/css/main.css
@@ -23,6 +23,7 @@ html {
 
     img {
         position: relative;
+        z-index: 5;
     }
 }
 
@@ -35,6 +36,7 @@ html {
     background-color: transparent;
     backdrop-filter: blur(10px);
     filter:brightness(50%);
+    z-index: 7;
 }
 
 .frosted-glass-left {
@@ -46,19 +48,36 @@ html {
 }
 
 .main-carousel-border {
+    transition: all .25s ease;
     position: absolute;
-    top: 87px;
     left: 0;
     right: 0;
     margin: 0 auto;
     max-width: 1400px;
     min-height: 35vh;
     background-color: transparent;
-    box-shadow: 6px 0 4px -4px var(--color-red-light), -6px 0 4px -4px var(--color-red-light);
-    z-index: 5;
+    box-shadow: 6px 0 25px -4px var(--color-red-light), -6px 0 25px -4px var(--color-red-light);
+    z-index: 9;
+    top: 87px;
+}
+
+.carousel-border-bottom {
+    position: relative;
+    width: 100%;
+    height: 10px;
+    top: -10px;
+    background-color: var(--color-red-light);
+    box-shadow: 0 4px 8px var(--color-red-light);
+    z-index: 1;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    z-index: 9;
 }
 
 .main-border {
+    transition: all .25s ease;
     max-width: 1400px;
     min-height: 400px;
     box-shadow: 6px 0 4px -4px var(--color-red-light), -6px 0 4px -4px var(--color-red-light);
@@ -68,16 +87,15 @@ main {
     margin: 0 auto;
     transition: all .25s ease;
     background-color: var(--color-blue-dark);
-    max-width: 1400px; 
+    max-width: 1400px;
 }
 
 /* MediaQuery */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 991px) and (orientation: portrait) {
     .main-carousel-border {
         display: none;
     }
 }
-
 @media screen and (min-width: 768px) {
     .firstPageImages {
         min-height: 30vh;
@@ -97,10 +115,6 @@ main {
         100% {
             transform: scale(1.2);
         }
-    }
-
-    .main-carousel-border {
-        display: none;
     }
 }
 
@@ -128,7 +142,7 @@ main {
         }
     }
 
-    .main-carousel-border {
+    .carousel-border-bottom {
         display: none;
     }
 }
@@ -156,10 +170,6 @@ main {
             top: -150px;
         }
     }
-
-    .main-carousel-border {
-        display: none;
-    }
 }
 
 @media screen and (min-width: 1400px) {
@@ -184,10 +194,6 @@ main {
             transform: scale(1.2);
             top: -200px;
         }
-    }
-
-    .main-carousel-border {
-        display: flex;
     }
 }
 
@@ -214,10 +220,6 @@ main {
             top: -600px;
         }
     }
-
-    .main-carousel-border {
-        display: flex;
-    }
 }
 
 @media screen and (min-width: 2560px) {
@@ -242,9 +244,5 @@ main {
             transform: scale(1.2);
             top: -600px;
         }
-    }
-
-    .main-carousel-border {
-        display: flex;
     }
 }
